@@ -5,7 +5,7 @@
 == 0.5.0 _(upcoming)_ ==
 
  * ~~Provide configurable idle timeouts to disconnect clients after a long time of inactivity.~~
- * Minimize the risk of brute force password guessing by imposing a delay before replying to invalid credentials.
+ * ~~Minimize the risk of brute force password guessing by imposing a delay before replying to invalid credentials.~~
 
 == 0.4.0 _(current release)_ ==
 
